--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     <div class="row align-items-center justify-content-between">
       {# Left Column: Visual #}
       <div class="col-md-6 col-lg-5 mb-5 mb-md-0 text-center"> {# Added text-center for image #}
-        <img src="{{ url_for('static', filename='img.png') }}" {# <<< UPDATE FILENAME! #}
+        <img src="{{ url_for('static', filename='images/img.png') }}" {# <<< UPDATE FILENAME! #}
              alt="Hero image" {# <<< UPDATE ALT TEXT! #}
              class="img-fluid rounded shadow-lg">
       </div>
