--- a/templates/layout.html
+++ b/templates/layout.html
@@ -87,7 +87,7 @@
                 <ul class="list-unstyled small">
                     <li class="mb-2"><a href="/#features" class="text-muted text-decoration-none">Features</a></li>
                     <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Templates</a></li>
-                    <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Pricing</a></li>
+                    <li class="mb-2"><a href="{{ url_for('pricing') }}" class="text-muted text-decoration-none">Pricing</a></li>
                     <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Integrations</a></li>
                 </ul>
             </div>
