--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
 </head>
 <body>
 
@@ -21,7 +22,11 @@
     {# --- Navbar --- #}
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="{{ url_for('home') }}">FormGen</a>
+        <a class="navbar-brand fw-bold d-inline-flex align-items-center" href="{{ url_for('home') }}">
+    <img src="{{ url_for('static', filename='favicon.png') }}" alt="" width="30" height="30" class="d-inline-block align-text-top me-2">
+    {#        ^-- Path to your icon    ^-- Alt Text (empty OK if brand name is next)   ^-- Adjust Size   ^-- Margin End (Spacing) #}
+    FormGen
+</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
