--- a/templates/layout.html
+++ b/templates/layout.html
@@ -106,7 +106,7 @@
                 <h6 class="text-uppercase fw-bold text-dark mb-3">Legal</h6>
                 <ul class="list-unstyled small">
                     <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Privacy Policy</a></li>
-                    <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Terms of Service</a></li>
+                    <li class="mb-2"><a href="{{ url_for('terms_of_service') }}" ...>Terms of Service</a></li>
                 </ul>
             </div>
         </div>
